<resources>
    <string name="app_name">Yemek Tarifim</string>
    <string name="title_text_please_connect_to_internet">Please Connect To Internet</string>
    <string name="button_text_try_again">TRY AGAIN</string>
    <string name="normal_text_username">Username</string>
    <string name="normal_text_password">Password</string>
    <string name="title_text_hello">Hello.</string>
    <string name="title_text_welcome_back">Welcome Back</string>
    <string name="button_text_login">LOGIN</string>
    <string name="button_text_register">REGISTER</string>
    <string name="title_text_invalid_user_inputs">Username or Password can not be Empty!</string>
    <string name="title_text_invalid_register_inputs">Error. Check the inputs, please!</string>
    <string name="text_required_character_length">Required 6 characters!</string>
    <string name="button_text_licences_button">Licences Button</string>
    <string name="alert_text_wrong_login_input">Username or Password wrong!</string>
    <string name="text_email">Email</string>
    <string name="text_name">Name</string>
    <string name="text_surname">Surname</string>
    <string name="text_age">Age</string>
    <string name="select_country">Select Country:</string>
    <string name="select_photo">Select photo</string>
    <string name="permission_required">Permission Required!</string>
    <string name="permission_required_for_gallery">Permission Required For Gallery!</string>
    <string name="give_permission">GIVE PERMISSION</string>
    <string name="friend_posts">Friend Posts</string>
    <string name="all_posts">All Posts</string>
    <string name="competition">Competition</string>
    <string name="setting">Setting</string>
    <string name="recipe_name">Recipe name</string>
    <string name="details">Details</string>
    <string name="recipe_detail">Recipe detail</string>
    <string name="content">Content</string>
    <string name="add_recipe_content">Add recipe content</string>
    <string name="share_recipe">Share recipe</string>
    <string name="please_enter_recipe_content">Please enter a recipe content</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_select_a_photo">Please select a photo from gallery</string>
    <string name="click_image_for_select_recipe_photo">Click Image For Select Recipe Photo</string>
    <string name="title_add_recipe_content">Add Recipe Content</string>
    <string name="post_fragment_fill_inputs_message">Please fill the empty fields add min 1 recipe content</string>
    <string name="unaccesable_account">Sorry Your Account Is Unaccessable!</string>
    <string name="profile">Profile</string>
    <string name="connected_s">Connected: %s</string>
    <string name="connected_people_count">Connected People: %s</string>
    <string name="no_connected_person_here">No Connected Person Here</string>
    <string name="connecting">Connecting..</string>
    <string name="search_a_recipe">Search a recipe</string>
    <string name="no_recipe_here">No Recipe Here</string>
    <string name="recipe_photo">Recipe photo</string>
    <string name="no_recipe_name">No recipe name</string>
    <string name="no_recipe_detail">No recipe detail</string>
    <string name="recipe_contents">Recipe contents</string>
    <string name="error_no_recipe_detail">Error! No recipe detail.</string>
    <string name="start">Start</string>
    <string name="image_changing_successfully">Image Changing is Successfully</string>
    <string name="image_loading_please_wait">Image loading, please wait…</string>
    <string name="image_changing_failed">Image changing failed!</string>
    <string name="title_share_recipe">Share Recipe</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_settings">Profile settings</string>
    <string name="friends_n0">Friends\n0</string>
    <string name="friends_formatted">Friends\n%s</string>
    <string name="update_message">Informations are Updating, Wait Please!</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="signing_out">Signing out…</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="edit_user_roles">Edit Users Roles</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="open_chatting_screen">Open chatting screen</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="user_photo">User Photo</string>
    <string name="search_a_username">Search a username</string>
    <string name="added_new_friend">Added new friend! :)</string>
    <string name="cannot_add_yourself_or_sameuser">You can not add yourself or same user!</string>
    <string name="username_formatted_show">\@%s</string>
    <string name="recipename_formatted_show">Recipe: %s</string>
    <string name="no_friend_post_here">No Friend Post Here</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="spam_alert">This message is Spam. Cannot Send!!</string>
    <string name="remove_friend">Remove friend</string>
    <string name="developers">Developers</string>
    <string name="save">Save</string>
    <string name="recipe_list_lower_than_five">Recipe List is lower than 5</string>
    <string name="show_scores">Show Scores</string>
    <string name="_0">0</string>
</resources>